# unifi-security-advisor

./: .gitignore  .gitleaks.toml  AUDIT_QUICKSTART.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  QUESTIONNAIRE.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.cli.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: repo-metadata.yml
.github/workflows/: advisory-drift.yml  api-drift.yml  gitleaks.yml  release.yml  security.yml  test.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  (+3 more)
docs/: 01-design-philosophy.md  02-api-strategy.md  03-site-manager-vs-network-integration.md  04-backup-file-strategy.md  05-credential-handling.md  06-mcp-strategy.md  07-coverage-analysis.md  08-questionnaire-addendum.md  09-advisory-data-maintenance.md  GOING-PUBLIC.md
samples/: README.md  discovery-first-design-notes.md  fixture-cgf-backup.json  fixture-home.json  fixture-local-api-v10.json  fixture-local-api.json  fixture-regulated.json  fixture-small-business.json  sample-gap-questions.md  sample-report.md  walkthrough-responses.md
src/: api_to_collections.py  app.css  app.html  cli.ts  findings_correlations.py  findings_enhanced.py  inspect_backup.py  models.py  normalize.py  parser.py  profile_weights.py  sanitizer.py  unifi_audit.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: keychain.rs  lib.rs
tests/: _smoke_adapter.py  _smoke_analyze.py  _smoke_correlate.py  _smoke_float_top.py  _smoke_profile_weights.py  conftest.py  test_adapter.py  test_analyze.py  test_correlations.py  test_extract_helpers.py  test_findings_enhanced.py  test_fixture_safety.py  test_float_top.py  test_models.py  test_no_credential_leak.py  test_normalize.py  test_pipeline_smoke.py  test_profile_weights.py  test_sanitizer.py  test_segmentation.py  test_write_text_encoding.py
tools/: anonymize-backup.ts  anonymize_fixture.py  bump-version.mjs  changelog-section.mjs  check-advisory-drift.ts  check-api-drift.ts  dump-backup-settings.ts  fetch-advisories.ts
(+165 files in other folders)
